chore(cockpit): all 14 modules done — board at 100%
序列 M12→M10→M13→M11→M14 全部交付，看板 14/14 完成、总进度 100%。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>